# project_dbt_completo

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
dbt_project/: dbt_project.yml
dbt_project/models/marts/: rh.sql
dbt_project/models/raw/crm/: raw_seed_new_filw.sql
dbt_project/models/staging/crm/: stg_crm_new_filw.sql
dbt_project/seeds/: new_filw.csv  region.csv
scripts/: query_postgres.py  setup_postgres.py
