[project]
name = "project-dbt-completo"
version = "0.1.0"
description = ""
authors = [
    {name = "andrebatistatech",email = "andre.batista.tech@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "dbt-core (>=1.10.13,<2.0.0)",
    "dbt-databricks (>=1.10.14,<2.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "dbt-postgres (>=1.9.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

